[gd_scene load_steps=11 format=3 uid="uid://cqlrhrg6x76ql"]

[ext_resource type="Script" uid="uid://e16kxic07uuo" path="res://Scenes/Player/Attacks/shot.gd" id="1_5l87p"]
[ext_resource type="Texture2D" uid="uid://c4njjlnmm8y1q" path="res://Art/Effects/BasicShot.png" id="2_k0reg"]
[ext_resource type="Script" uid="uid://dsais2ikyxopu" path="res://Scenes/Entities/timed_death_component.gd" id="3_cot61"]
[ext_resource type="PackedScene" uid="uid://csc0lo74xf1od" path="res://Scenes/Entities/hit_box.tscn" id="3_hle2d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_svrs1"]
atlas = ExtResource("2_k0reg")
region = Rect2(0, 0, 10, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgbp4"]
atlas = ExtResource("2_k0reg")
region = Rect2(10, 0, 10, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4qad"]
atlas = ExtResource("2_k0reg")
region = Rect2(20, 0, 10, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_vqu2g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svrs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgbp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4qad")
}],
"loop": true,
"name": &"basic_shot",
"speed": 14.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3gkbt"]
size = Vector2(9, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xkmeu"]
size = Vector2(5, 4)

[node name="Shot" type="Node2D" groups=["PlayerProjectiles"]]
script = ExtResource("1_5l87p")

[node name="Sprites" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_vqu2g")
animation = &"basic_shot"
autoplay = "basic_shot"

[node name="TimedDealthComponent" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true
script = ExtResource("3_cot61")

[node name="HitBox" parent="." instance=ExtResource("3_hle2d")]
collision_layer = 2
collision_mask = 4
_damage = 1
_stun_damage = 3
_power = 1.0

[node name="HitCollision" parent="HitBox" index="0"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_3gkbt")

[node name="Physical" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="PhysicalCollision" type="CollisionShape2D" parent="Physical"]
position = Vector2(2.5, 0)
shape = SubResource("RectangleShape2D_xkmeu")
debug_color = Color(0, 0.647179, 0.218115, 0.42)

[node name="CollisionPoint" type="Marker2D" parent="."]
position = Vector2(4, 0)

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="Physical" to="." method="_on_physical_body_entered"]

[editable path="HitBox"]
